Fix the social icons layout bug in thorntree

--- a/app/assets/stylesheets/_globalnav/_core/_nav.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_nav.sass
@@ -339,6 +339,7 @@ a.nav__item--breadcrumbs
   +border-radius(16)
   @extend %left-icon
   @extend %left-icon--hidden-text
+  @extend %lp-font-stack
   color: $header-gray
   margin: 16px 0 17px
   width: 32px
